--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-purgecss": "^5.0.0",
+        "laravel-mix-tailwind": "^0.1.0",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "tailwindcss": "^1.7.3",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     }
