--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "pusher/pusher-php-server": "^4.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "laravel/homestead": "^11.0",
