Notification styling improvements & moment.js install

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vue-moment": "^4.1.0",
         "vue-unique-id": "^3.1.4"
     }
 }
