--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
+        "laracasts/generators": "^2.0",
         "laravel/homestead": "^11.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
