--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3.26",
+        "php": "^8.0",
         "ext-curl": "*",
         "ext-json": "*",
         "beyondcode/laravel-websockets": "^1.9",
+        "fakerphp/faker": "^1.14",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -19,18 +20,17 @@
         "laravel/passport": "^10.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "phpunit/phpunit": "^9.5",
         "pusher/pusher-php-server": "^4.1",
         "vipsoft/unzip": "^1.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
         "laracasts/generators": "^2.0",
         "laravel/homestead": "^11.0",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "nunomaduro/collision": "^5.0"
     },
     "config": {
         "optimize-autoloader": true,
