--- a/package.json
+++ b/package.json
@@ -28,8 +28,14 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^27.1.0",
         "@ckeditor/ckeditor5-vue2": "^1.0.5",
+        "@fullcalendar/core": "^5.9.0",
+        "@fullcalendar/daygrid": "^5.9.0",
+        "@fullcalendar/interaction": "^5.9.0",
+        "@fullcalendar/timegrid": "^5.9.0",
+        "@fullcalendar/vue": "^5.9.0",
         "advanced-laravel-vue-paginate": "^0.1.9",
         "vue-moment": "^4.1.0",
+        "vue-sweetalert2": "^5.0.2",
         "vue-unique-id": "^3.2.0"
     }
 }
