--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "bootstrap": "^4.6.0",
         "cross-env": "^7.0.3",
-        "jquery": "^3.6.0",
         "laravel-echo": "^1.11.1",
-        "laravel-mix": "^6.0.27",
-        "lodash": "^4.17.21",
-        "popper.js": "^1.12",
-        "postcss": "^8.3.6",
         "pusher-js": "^7.0.3",
-        "resolve-url-loader": "^3.1.4",
-        "sass": "^1.37.5",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.6.14",
+        "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.14"
+        "vue-template-compiler": "^2.6.12",
+        "@popperjs/core": "^2.9.2",
+        "axios": "^0.21",
+        "bootstrap": "^5.0.1",
+        "jquery": "^3.6",
+        "laravel-mix": "^6.0.6",
+        "lodash": "^4.17.19",
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^27.1.0",
