--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "@popperjs/core": "^2.9.2",
         "axios": "^0.21",
         "bootstrap": "^5.1.1",
+        "browser-sync": "^2.27.5",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
         "jquery": "^3.6",
         "laravel-echo": "^1.11.1",
