Move team migrations

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "tightenco/ziggy": "^2.0",
-        "zanysoft/laravel-zip": "dev-laravel-11"
+        "zanysoft/laravel-zip": "dev-laravel-11",
+        "ext-curl": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
