--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^5.0.0",
-        "autoprefixer": "^10.4.16",
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "flowbite": "^2.4.1",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
+        "postcss": "^8.4.39",
+        "tailwindcss": "^3.4.4",
         "vite": "^5.0",
         "vue": "^3.3.13"
     }
