--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "tailwindcss": "^3.4.4",
         "vite": "^5.0",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
     }
 }
