--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
