--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.9",
         "tightenco/ziggy": "^2.0",
         "zanysoft/laravel-zip": "dev-laravel-11",
+        "laracasts/generators": "dev-laravel-11",
         "ext-curl": "*"
     },
     "require-dev": {
@@ -73,6 +74,10 @@
         {
             "type": "git",
             "url": "https://github.com/CalumChamberlain/laravel-zip.git"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/Zlimon/Laravel-5-Generators-Extended.git"
         }
     ]
 }
