--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,17 @@
     "require": {
         "php": "^8.2",
         "ext-curl": "*",
+        "ext-intl": "*",
         "inertiajs/inertia-laravel": "^1.0",
         "laracasts/generators": "dev-laravel-11",
         "laravel/framework": "^11.9",
         "laravel/jetstream": "^5.1",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "mongodb/laravel-mongodb": "^4.6",
         "symfony/dom-crawler": "^7.1",
         "tightenco/ziggy": "^2.0",
-        "zanysoft/laravel-zip": "dev-laravel-11",
-        "ext-intl": "*"
+        "zanysoft/laravel-zip": "dev-laravel-11"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0",
