Add default .env parameters

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+MONGO_DB_URI=
+MONGO_DB_DATABASE=
+
+OSRS_BOX_API_URL=
