--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "mongodb/laravel-mongodb": "^4.6",
+        "opcodesio/log-viewer": "^3.10",
         "symfony/dom-crawler": "^7.1",
         "tightenco/ziggy": "^2.0",
         "zanysoft/laravel-zip": "dev-laravel-11"
