--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
+        "dayjs": "^1.11.13",
         "laravel-vue-pagination": "^4.1.3",
         "lodash": "^4.17.21"
     }
