--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "dayjs": "^1.11.13",
         "laravel-vue-pagination": "^4.1.3",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "three": "^0.168.0"
     }
 }
