--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "laravel/sail": "^1.30",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1"
+        "pestphp/pest": "^3.5"
     },
     "autoload": {
         "psr-4": {
