--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "daisyui": "^4.12.14",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.4",
